#comment Fixed image max-size and vertical alignment	#time 35m

--- a/web/css/fc_styles.css
+++ b/web/css/fc_styles.css
@@ -1863,7 +1863,7 @@ this is to nudge the "back to" button into position*/
 
 .docViewerEntityInfo p {
 	margin:15px 15px 10px 15px;
-	padding-top:15px;
+	padding-top: 0px;
 }
 
 table.facility-field-summary tr td { 
